--- a/css/template/main.css
+++ b/css/template/main.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: var(--color-reverse);
+    font-family: var(--font-family);
+}
+
 .row {
     width: 100%;
     display: flex;
@@ -13,12 +21,29 @@
     max-width: var(--general-max-width);
 }
 
+.row.contForm {
+    margin: 0 93px;
+    padding: 0 32px;
+}
+
+.row.infoSec {
+    width: 50%;
+}
+
 .divider {
     width: 100%;
     height: 0.5 rem;
     position: absolute;
     bottom: -0.5 rem;
     background-color: var(--color-divider);
+}
+
+.form.padding {
+    padding: 24px 16px 8px;
+}
+
+.form.contPadding {
+    padding: var(--container-form-padding);
 }
 
 /* @media screen and (min-width: 900px) {
