--- a/css/template/root.css
+++ b/css/template/root.css
@@ -29,6 +29,6 @@
     --h3-line-height: 1.5;
     --p-size: 1.5rem;
     --p-weight: 400;
-    --font-family :"Netflix";
-
+    --font-family: "Netflix";
+    --font-size-form: 20px;
 }
