--- a/css/template/utility.css
+++ b/css/template/utility.css
@@ -10,8 +10,60 @@
     justify-content: space-between;
 }
 
+.flex.column {
+    flex-direction: column;
+}
+
 .flex.align-center {
     align-items: center;
 }
+
+.border {
+    border: 1px solid #fff;
+}
+
+.mAuto {
+    margin: auto;
+}
+
+.p-top {
+    padding-top: 20px;
+}
+
+.txtWht {
+    color: #fff;
+    text-align: center;
+}
+
+.fpSize {
+    font-size: var(--font-size-form);
+} 
+
+.txt-bold {
+    font-weight: bold;
+}
+
+.txt-center {
+    text-align: center;
+}
+
+.border-rounded {
+    border-radius: 5px;
+}
+
+/* Colors */
+
+.primary-color {
+    background-color: var(--color-primary);
+}
+
+.bg-wht {
+    background-color: var(--color-secondary-text);
+}
+
+.reverse-color {
+    color: var(--color-reverse)
+}
+
 
 
