--- a/css/template/utility.css
+++ b/css/template/utility.css
@@ -27,7 +27,7 @@
 }
 
 .p-top {
-    padding-top: 20px;
+    padding-top: 25px;
 }
 
 .txtWht {
@@ -63,6 +63,10 @@
 
 .reverse-color {
     color: var(--color-reverse)
+}
+
+.color-wht {
+    color: var(--color-secondary-text);
 }
 
 
