--- a/components/header.html
+++ b/components/header.html
@@ -1,23 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
-</head>
-<body>
-    <div class="row border">
-        <div class="row section border">
-            <div class="row contForm border flex column">
-                <h3 class="txtWht fpSize">Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti o riattivare il tuo abbonamento.</h3>
-                <div class="form contPadding row container flex justify-center">
-                    <input class="form padding" placeholder="La tua email" type="email" />
-                    <button class="btn txtWht">Inizia</button>
-                </div>
+    <link rel="stylesheet" href="../css/index.css" />
+  </head>
+  <body>
+    <header class="img-bg">
+      <nav class="transparent">
+        <div class="nav row flex justify-between mAuto p-top transparent">
+          <div class="container nav flex justify-between transparent">
+            <div class="nav__logo transparent">
+              <img
+                src="../assets/imgs/Netflix_2015_logo.svg.png"
+                alt="Logo"
+                class="transparent"
+              />
             </div>
-
+            <div class="nav__btn-actions flex align-center transparent">
+              <form action="" class="flex transparent">
+                <div class="flex align-center">
+                  <select
+                    name="language"
+                    id="lg"
+                    class="txtWht form border-rounded select flex justify-center align-center"
+                  >
+                    <option class="bg-wht reverse-color" value="ita">
+                      Italiano
+                    </option>
+                    <option class="bg-wht reverse-color" value="eng">
+                      English
+                    </option>
+                  </select>
+                </div>
+                <button
+                  class="btn-action primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht"
+                >
+                  Accedi
+                </button>
+              </form>
+            </div>
+          </div>
         </div>
-    </div>
-</body>
+      </nav>
+
+      <div class="row border maxh">
+        <div class="row border">
+          <div class="row container flex column transparent txt-center container-title border">
+            
+              <h1 class="transparent main-title ">Film, serie TV e tanto altro, senza limiti</h1>
+              <br>
+              <h3 class="transparent h3">Guarda ciò che vuoi ovunque. Disdici quando vuoi.</h3>
+              
+          <div class="transparent" >
+            <p class="transparent p">Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti o riattivare il tuo abbonamento.</p>
+              <form action="" class="transparent flex justify-center">
+                  <input type="email" name="" class="input-mail border-rounded">
+                  <button class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">Inizia ></button>
+              </form>
+          </div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
