first version faq

--- a/css/template/main.css
+++ b/css/template/main.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: var(--color-reverse);
+    /* background-color: var(--color-reverse); */
     font-family: var(--font-family);
 }
 
@@ -30,15 +30,16 @@
 .row.infoSec {
     width: 50%;
 }
-.row.container-title{
+
+.row.container-title {
     width: var(--general-wd-container);
 }
 
 .divider {
     width: 100%;
-    height: 0.5 rem;
+    height: 10px;
     position: absolute;
-    bottom: -0.5 rem;
+    /* bottom: -0.5 rem; */
     background-color: var(--color-divider);
 }
 
@@ -53,34 +54,42 @@
 
 /* TEXT */
 
-.main-title{
+.main-title {
     color: var(--color-secondary-text);
     font-size: var(--titles-size);
     font-weight: var(--title-weight);
     font-family: var(--font-family-bold);
 }
 
-.h3{
+.h3 {
     color: var(--color-secondary-text);
     font-size: var(--h3-size);
     font-weight: var(--h3-weight);
     line-height: var(--h3-line-height);
 }
 
-.p{
+.p {
     color: var(--color-secondary-text);
     font-size: var(--p-size);
     font-weight: var(--p-weight);
 }
 
-.input-mail{
+.input-mail {
     background-color: rgba(105, 135, 180, 0.708);
     padding: var(--padding-form);
+    width: 440.78px;
+    height: 56px;
+
 }
 
-.button{
+.button {
     padding: var(--padding-button-email);
     border-style: none;
     font-size: var(--font-size-form);
+    margin-left: 8px;
+    height: 56px;
+    width: 137.22px;
 }
+
+
 /* @media screen and (min-width: 900px) {} */
