--- a/css/template/root.css
+++ b/css/template/root.css
@@ -1,42 +1,42 @@
+@font-face {
+  font-family: "Netflix";
+  src: url(../../assets/font/NetflixSans-Regular.otf);
+}
 
 @font-face {
-    font-family: "Netflix";
-    src : url(../../assets/font/NetflixSans-Regular.otf);
-  }
-@font-face{
   font-family: 'Netflix-bold';
   src: url('../../assets/font/NetflixSans-Bold.otf')
 }
 
 :root {
-    /* Colors: */
-    --color-primary: #E50914;
-    --color-primary-hover: #C11119;
-    --color-secondary-text: #fff;
-    --color-terziary: #2d2d2d;
-    --color-terziary-hover: #414141;
-    --color-reverse: #000;
-    --color-divider: #353535;
-    /* Sizes: */
-    --btn-width: auto;
-    --general-max-width: 1170px;
-    --general-wd-container: calc(83,3333% - 6rem);
-    /* Spacing: */
-    --container-form-padding: 1rem auto 0;
-    --btn-padding:0.75rem 1.5rem;
-    --section-tb-padding: 72px;
-    --padding-form: 24px 16px 8px;
-    --padding-button-email: 12px 24px;
-    /* Font: */
-    --titles-size: 3rem;
-    --title-weight: 900;
-    --h3-size: 1.5rem;
-    --h3-weight: 400;
-    --h3-line-height: 1.5rem;
-    --p-size: 1.25rem;
-    --p-weight: 400;
-    --font-family: "Netflix";
-    --font-family-bold: 'Netflix-bold';
-    --font-size-form: 20px;
+  /* Colors: */
+  --color-primary: #E50914;
+  --color-primary-hover: #C11119;
+  --color-secondary-text: #fff;
+  --color-terziary: #2d2d2d;
+  --color-terziary-hover: #414141;
+  --color-reverse: #000;
+  --color-divider: #353535;
+  /* Sizes: */
+  --btn-width: auto;
+  --general-max-width: 1170px;
+  --general-wd-container: calc(83, 3333% - 6rem);
+  /* Spacing: */
+  --container-form-padding: 1rem auto 0;
+  --btn-padding: 0.75rem 1.5rem;
+  --section-tb-padding: 72px;
+  --padding-form: 24px 16px 8px;
+  --padding-button-email: 12px 24px;
+  /* Font: */
+  --titles-size: 3rem;
+  --title-weight: 900;
+  --h3-size: 1.5rem;
+  --h3-weight: 400;
+  --h3-line-height: 1.5rem;
+  --p-size: 1.25rem;
+  --p-weight: 400;
+  --font-family: "Netflix";
+  --font-family-bold: 'Netflix-bold';
+  --font-size-form: 20px;
 
 }
