--- a/components/sections.html
+++ b/components/sections.html
@@ -1,21 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/index.css" />
+  </head>
+  <body>
     <div class="row">
-        <div class="container border row section">
-            <div class="infoSection border">
-                
+      <div class="row container flex column">
+        <div class="row container section">
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">Goditi Netflix sulla tua TV</h2>
+              <p class="h3 mtop16">
+                Guarda Netflix su smart TV, Playstation, Xbox, Chromecast, Apple
+                TV, lettori Blu-ray e molti altri dispositivi.
+              </p>
             </div>
-            <div class="container infoSection border">
-
-            </div>
+          </div>
+          <div class="box box__img transparent"></div>
         </div>
+        <div class="row container section">
+          <div class="box box__img2"></div>
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">Guarda Netflix ovunque</h2>
+              <p class="h3 mtop16">
+                Cellulare, tablet, laptop e TV: scegli tu cosa usare per
+                guardare in streaming film e serie TV senza limiti.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row container section">
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">Crea profili per i bambini</h2>
+              <p class="h3 mtop16">
+                I bambini scoprono nuove avventure in compagnia dei loro
+                personaggi preferiti in uno spazio tutto loro già incluso nel
+                tuo abbonamento.
+              </p>
+            </div>
+          </div>
+          <div class="box box__img3"></div>
+        </div>
+        <div class="row container section">
+          <div class="box box__img4"></div>
+          <div class="box flex column justify-center align-center">
+            <div class="box__title">
+              <h2 class="main-title">
+                Scarica le tue serie da guardare offline
+              </h2>
+              <p class="h3 mtop16">
+                Guarda in aereo, sul treno, in astronave...
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
