--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,9 @@
 @import url("./template/main.css");
 
 
+
 /* Components */
 
 @import url("./template/components/navbar.css");
 @import url('./template/components/header.css');
+@import url("./template/components/sections.css");
