--- a/css/template/utility.css
+++ b/css/template/utility.css
@@ -61,7 +61,11 @@
 
 
 /* Colors */
-.transparent{
+.transparent-black{
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.593) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.transparent {
     background-color: transparent;
 }
 
