--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="img-bg">
-      <nav class="transparent">
+      <nav >
         <div class="nav row flex justify-between mAuto p-top transparent">
           <div class="container nav flex justify-between transparent">
             <div class="nav__logo transparent">
@@ -45,9 +45,9 @@
         </div>
       </nav>
 
-      <div class="row border maxh">
-        <div class="row border">
-          <div class="row container flex column transparent txt-center container-title border">
+      <div class="row maxh">
+        <div class="row transparent">
+          <div class="row container flex column transparent txt-center container-title">
             
               <h1 class="transparent main-title ">Film, serie TV e tanto altro, senza limiti</h1>
               <br>
