--- a/components/sections.html
+++ b/components/sections.html
@@ -6,9 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/index.css" />
   </head>
-  <body>
-    <div class="row">
-      <div class="row container flex column">
+  <body class="black">
+    <div class="row flex column justify-center align-center">
         <div class="row container section">
           <div class="box flex column justify-center align-center">
             <div class="box__title">
@@ -19,10 +18,21 @@
               </p>
             </div>
           </div>
-          <div class="box box__img transparent"></div>
+          <div class="box transparent">
+            <img src="../assets/imgs/tv.png" alt="tv image" class="box__img">
+            <div class="box__video v1 flex justify-center align-center">
+                <video src="../assets/video/video-tv-0819.m4v" autoplay loop></video>
+            </div>
+          </div>
         </div>
+        <div class="divider"></div>
         <div class="row container section">
-          <div class="box box__img2"></div>
+          <div class="box transparent">
+            <img src="../assets/imgs/device-pile.png" alt="device image" class="box__img" />
+            <div class="box__video v2 flex justify-center align-center">
+                <video src="../assets/video/video-devices.m4v" autoplay loop></video>
+            </div>
+          </div>
           <div class="box flex column justify-center align-center">
             <div class="box__title">
               <h2 class="main-title">Guarda Netflix ovunque</h2>
@@ -33,6 +43,7 @@
             </div>
           </div>
         </div>
+        <div class="divider"></div>
         <div class="row container section">
           <div class="box flex column justify-center align-center">
             <div class="box__title">
@@ -46,8 +57,18 @@
           </div>
           <div class="box box__img3"></div>
         </div>
+        <div class="divider"></div>
         <div class="row container section">
-          <div class="box box__img4"></div>
+          <div class="box box__img4 flex column justify-end align-center">
+            <div class="box__download black flex justify-between align-center">
+                <img src="../assets/imgs/boxshot.png" alt="boxshot" width="57px" height="84px" />
+                <div class="box__titles">
+                    <p class="color-wht">Stranger Things</p>
+                    <p class="blue">Download in corso...</p>
+                </div>
+                <img width="50px" height="50px" src="../assets/video/download-icon.gif" />
+            </div>
+          </div>
           <div class="box flex column justify-center align-center">
             <div class="box__title">
               <h2 class="main-title">
@@ -59,7 +80,7 @@
             </div>
           </div>
         </div>
-      </div>
+        <div class="divider"></div>
     </div>
   </body>
 </html>
