--- a/css/template/components/navbar.css
+++ b/css/template/components/navbar.css
@@ -1,5 +1,8 @@
+nav {
+  background-image:linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%)
+}
+
 .nav {
- 
   width: calc(83.33333333333334% - 6rem);
 }
 
