--- a/css/template/main.css
+++ b/css/template/main.css
@@ -11,7 +11,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: var(--color-reverse);
+    /* background-color: var(--color-reverse); */
 }
 
 .row.section {
@@ -39,8 +39,6 @@
 .divider {
     width: 100%;
     height: 10px;
-    position: absolute;
-    /* bottom: -0.5 rem; */
     background-color: var(--color-divider);
 }
 
