--- a/css/template/utility.css
+++ b/css/template/utility.css
@@ -14,6 +14,10 @@
     justify-content: space-around;
 }
 
+.flex.justify-end {
+    justify-content: end;
+}
+
 .flex.column {
     flex-direction: column;
 }
@@ -21,7 +25,6 @@
 .flex.align-center {
     align-items: center;
 }
-
 
 .border {
     border: 1px solid #fff;
@@ -73,7 +76,7 @@
 }
 
 /* Colors */
-.transparent-black{
+.transparent-black {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.593) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
@@ -95,4 +98,12 @@
 
 .color-wht {
     color: var(--color-secondary-text);
+}
+
+.black {
+    background-color: var(--color-reverse);
+}
+
+.blue {
+    color: var(--color-download);
 }
