--- a/components/sections.html
+++ b/components/sections.html
@@ -8,7 +8,7 @@
   </head>
   <body class="black">
     <div class="row flex column justify-center align-center">
-        <div class="row container section">
+        <div class="row container section flex-mobile">
           <div class="box flex column justify-center align-center">
             <div class="box__title">
               <h2 class="main-title">Goditi Netflix sulla tua TV</h2>
