--- a/css/index.css
+++ b/css/index.css
@@ -7,5 +7,7 @@
 /* Components */
 
 @import url("./template/components/navbar.css");
-@import url('./template/components/header.css');
+@import url("./template/components/header.css");
 @import url("./template/components/sections.css");
+@import url("./template/components/faq.css");
+@import url("./template/components/footer.css");
