--- a/css/template/utility.css
+++ b/css/template/utility.css
@@ -75,6 +75,10 @@
     margin-top: 45px;
 }
 
+.fit-content {
+    width: fit-content;
+}
+
 /* Colors */
 .transparent-black {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.593) 0%, rgba(0, 0, 0, 0) 100%);
