--- a/components/footer.html
+++ b/components/footer.html
@@ -11,8 +11,11 @@
 
 <body>
     <div class="row maxh">
-        <footer class="row container">
-            <p>Domande? Chiama 800-130-364</p>
+        <footer class="row container footer">
+            <div class="questions">
+                <p>Domande? Chiama 800-130-364</p>
+
+            </div>
             <div class="link">
                 <ul>
                     <li><a href="#">Domande frequenti</a></li>
@@ -76,7 +79,7 @@
                 </select>
 
             </div>
-            <div class="net">
+            <div class="netflix">
                 <p>Netflix italia</p>
             </div>
         </footer>
