--- a/css/template/main.css
+++ b/css/template/main.css
@@ -2,15 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* background-color: var(--color-reverse); */
     font-family: var(--font-family);
+}
+
+body {
+    background-color: var(--color-reverse);
 }
 
 .row {
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: transparent;
+    /* background-color: var(--color-reverse); */
 }
 
 .row.section {
@@ -38,8 +41,6 @@
 .divider {
     width: 100%;
     height: 10px;
-    position: absolute;
-    /* bottom: -0.5 rem; */
     background-color: var(--color-divider);
 }
 
@@ -92,4 +93,6 @@
 }
 
 
-/* @media screen and (min-width: 900px) {} */
+/* @media screen and (min-width: 960px) {
+
+} */
