--- a/components/footer.html
+++ b/components/footer.html
@@ -11,77 +11,47 @@
 
 <body>
     <div class="row maxh">
-        <footer class="row container footer">
-            <div class="questions">
-                <p>Domande? Chiama 800-130-364</p>
-
+        <footer class="row container ">
+            <div class="support_number">
+                <p>Domande? Chiama <a href="#">800-130-364</a></p>
             </div>
-            <div class="link">
+            <div class="footer_links">
                 <ul>
                     <li><a href="#">Domande frequenti</a></li>
-                    <li><a href="#">Rapporti con gli investitori
-
-                        </a></li>
-                    <li><a href="#">Come guardare Netflix
-
-                        </a></li>
-                    <li><a href="#">Informazioni sull'azienda
-
-                        </a></li>
-                    <li><a href="#">Note legali
-                        </a></li>
+                    <li><a href="#">Rapporti con gli investitori</a></li>
+                    <li><a href="#">Come guardare Netflix</a></li>
+                    <li><a href="#">Informazioni sull'azienda </a></li>
+                    <li><a href="#">Note legali</a></li>
                 </ul>
                 <ul>
-                    <li><a href="#">Centro assistenza
-                        </a></li>
-                    <li><a href="#">Opportunità di lavoro
-                        </a></li>
-                    <li><a href="#">Condizioni di utilizzo
-                        </a></li>
-                    <li><a href="#">Contattaci
-                        </a></li>
-                    <li><a href="#">Solo su Netflix
-                        </a></li>
+                    <li><a href="#">Centro assistenza</a></li>
+                    <li><a href="#">Opportunità di lavoro</a></li>
+                    <li><a href="#">Condizioni di utilizzo</a></li>
+                    <li><a href="#">Contattaci</a></li>
+                    <li><a href="#">Solo su Netflix</a></li>
                 </ul>
                 <ul>
-                    <li><a href="#">Account
-                        </a></li>
-                    <li><a href="#">Riscatta carte regalo
-                        </a></li>
-                    <li><a href="#">Privacy
-                        </a></li>
-                    <li><a href="#">Test di velocità
-                        </a></li>
-                    <li><a href="#">Preferenze per la pubblicità
-                        </a></li>
+                    <li><a href="#">Account</a></li>
+                    <li><a href="#">Riscatta carte regalo</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Test di velocità</a></li>
+                    <li><a href="#">Preferenze per la pubblicità</a></li>
                 </ul>
                 <ul>
-                    <li><a href="#">Media Center
-                        </a></li>
-                    <li><a href="#">Acquista carte regalo
-                        </a></li>
-                    <li><a href="#">Preferenze per i cookie
-                        </a></li>
-                    <li><a href="#">Garanzia legale
-                        </a></li>
+                    <li><a href="#">Media Center</a></li>
+                    <li><a href="#">Acquista carte regalo</a></li>
+                    <li><a href="#">Preferenze per i cookie</a></li>
+                    <li><a href="#">Garanzia legale</a></li>
                 </ul>
-
             </div>
-            <div class="bottone">
+            <div class="lang_selector">
                 <select name="language" id="lg"
                     class="txtWht form border-rounded select flex justify-center align-center">
-                    <option class="bg-wht reverse-color" value="ita">
-                        Italiano
-                    </option>
-                    <option class="bg-wht reverse-color" value="eng">
-                        English
-                    </option>
+                    <option class="bg-wht reverse-color" value="ita" selected>Italiano</option>
+                    <option class="bg-wht reverse-color" value="eng">English</option>
                 </select>
-
             </div>
-            <div class="netflix">
-                <p>Netflix italia</p>
-            </div>
+            <div class="netflix_tag">Netflix italia</div>
         </footer>
     </div>
 </body>
