--- a/components/footer.html
+++ b/components/footer.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="row maxh">
-        <footer class="row container ">
+    <footer class="row container section flex column align-center">
+        <div class="row container flex column">
             <div class="support_number">
                 <p>Domande? Chiama <a href="#">800-130-364</a></p>
             </div>
@@ -46,14 +46,15 @@
             </div>
             <div class="lang_selector">
                 <select name="language" id="lg"
-                    class="txtWht form border-rounded select flex justify-center align-center">
+                    class="txtWht form border-rounded select flex justify-center align-center bg-input">
                     <option class="bg-wht reverse-color" value="ita" selected>Italiano</option>
                     <option class="bg-wht reverse-color" value="eng">English</option>
                 </select>
             </div>
             <div class="netflix_tag">Netflix italia</div>
-        </footer>
-    </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
