quasi final commit

--- a/components/header.html
+++ b/components/header.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
-    <header class="img-bg">
+    <header class="h600">
+      <div class="overlay">
       <nav >
         <div class="nav row flex justify-between mAuto p-top transparent">
           <div class="container nav flex justify-between transparent">
@@ -50,12 +51,11 @@
           <div class="row container flex column transparent txt-center container-title">
             
               <h1 class="transparent main-title ">Film, serie TV e tanto altro, senza limiti</h1>
-              <br>
-              <h3 class="transparent h3">Guarda ciò che vuoi ovunque. Disdici quando vuoi.</h3>
+              <h3 class="transparent h3 mtop25">Guarda ciò che vuoi ovunque. Disdici quando vuoi.</h3>
               
           <div class="transparent" >
-            <p class="transparent p">Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti o riattivare il tuo abbonamento.</p>
-              <form action="" class="transparent flex justify-center">
+            <p class="transparent p mtop25">Vuoi guardare Netflix? Inserisci l'indirizzo email per abbonarti o riattivare il tuo abbonamento.</p>
+              <form action="" class="transparent flex justify-center mtop16 ">
                   <input type="email" name="" class="input-mail border-rounded">
                   <button class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">Inizia ></button>
               </form>
@@ -63,6 +63,7 @@
           </div>
         </div>
       </div>
+    </div>
     </header>
   </body>
 </html>
