--- a/css/template/components/header.css
+++ b/css/template/components/header.css
@@ -1,5 +1,10 @@
-.img-bg{
-    width: 100vw;
-    height: 700px;
-    background: url('../../../assets/imgs/IT-it-20240129-popsignuptwoweeks-perspective_alpha_website_small.jpg');
+header {
+    background: url(../../../assets/imgs/IT-it-20240129-popsignuptwoweeks-perspective_alpha_website_small.jpg) ;
+    
+    
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0.9) 100%);
 }
