--- a/css/template/components/header.css
+++ b/css/template/components/header.css
@@ -8,3 +8,51 @@ header {
     height: 100%;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0.9) 100%);
 }
+
+.banner {
+    width: 85%;
+    height: 144px;
+    background: radial-gradient(51.39% 511.66% at 47.68% -217.91%,
+            #ff9900 0%,
+            #e50914 17.27%,
+            #0e1b4f 79.44%,
+            #000413 100%);
+    box-shadow: 0px -8px 25px rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 22px;
+    z-index: 100;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    top: -65px;;
+    position: relative;
+}
+
+.text {
+    padding-left: 32px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    margin: 0;
+}
+
+#specific {
+    margin-top: 4px;
+    margin-bottom: 8px;
+
+}
+
+.text button {
+    cursor: pointer;
+    color: #448ef4;
+    gap: 8px;
+    background: none;
+    border: none;
+    font-weight: 500;
+    text-decoration: underline;
+    font-size: 18px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+
+}
