--- a/components/sections.html
+++ b/components/sections.html
@@ -21,16 +21,16 @@
           <div class="box transparent">
             <img src="../assets/imgs/tv.png" alt="tv image" class="box__img">
             <div class="box__video v1 flex justify-center align-center">
-                <video src="../assets/video/video-tv-0819.m4v" autoplay loop></video>
+                <video src="../assets/video/video-tv-0819.m4v" autoplay loop muted></video>
             </div>
           </div>
         </div>
         <div class="divider"></div>
-        <div class="row container section">
+        <div class="row container section flex-mobile reverse">
           <div class="box transparent">
             <img src="../assets/imgs/device-pile.png" alt="device image" class="box__img" />
             <div class="box__video v2 flex justify-center align-center">
-                <video src="../assets/video/video-devices.m4v" autoplay loop></video>
+                <video src="../assets/video/video-devices.m4v" autoplay loop muted></video>
             </div>
           </div>
           <div class="box flex column justify-center align-center">
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="divider"></div>
-        <div class="row container section">
+        <div class="row container section flex-mobile">
           <div class="box flex column justify-center align-center">
             <div class="box__title">
               <h2 class="main-title">Crea profili per i bambini</h2>
@@ -58,7 +58,7 @@
           <div class="box box__img3"></div>
         </div>
         <div class="divider"></div>
-        <div class="row container section">
+        <div class="row container section flex-mobile reverse">
           <div class="box box__img4 flex column justify-end align-center">
             <div class="box__download black flex justify-between align-center">
                 <img src="../assets/imgs/boxshot.png" alt="boxshot" width="57px" height="84px" />
