--- a/css/template/components/sections.css
+++ b/css/template/components/sections.css
@@ -4,6 +4,7 @@
 }
 
 .box__title {
+    width: 100%;
   text-align: start;
 }
 
@@ -57,11 +58,29 @@
     border-radius: 0.75rem;
     padding: 10px;
     margin-bottom: 20px;
+    position: absolute;
 }
 
 @media screen and (max-width: 960px) {
     .flex-mobile {
         display: flex;
         flex-direction: column;
+    }
+
+    .reverse {
+        flex-direction: column-reverse;
+    }
+
+    .box__title {
+        text-align: center;
+    }
+
+    .box__title p {
+        padding: 0 20px 0 20px;
+        font-size: var();
+    }
+
+    .box {
+        width: 640px;
     }
 }
