add media queries

--- a/components/faq.html
+++ b/components/faq.html
@@ -79,7 +79,7 @@
                             tuo
                             abbonamento.
                         </p>
-                        <div class="flex justify-center w100 mtop16">
+                        <div class="flex justify-center w100 mtop16 form-btn">
                             <input type="email" name="" class="input-mail border-rounded fpSize">
                             <button
                                 class="button primary-color txt-bold border-rounded txt-center flex align-center justify-center txtWht">Inizia
