--- a/css/template/components/faq.css
+++ b/css/template/components/faq.css
@@ -25,3 +25,14 @@ h2 {
     font-size: 3rem;
     font-weight: 900;
 }
+
+@media screen and (max-width:600px) {
+    .form-btn {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .button {
+        margin: 20px;
+    }
+}
