--- a/css/template/components/footer.css
+++ b/css/template/components/footer.css
@@ -1,6 +1,6 @@
-footer {
+/* footer {
     background-color: black;
-}
+} */
 
 .footer_links ul li {
     list-style-type: none;
@@ -35,4 +35,11 @@ footer a {
 
 .support_number a {
     font-size: 1rem;
+}
+
+@media screen and (max-width:960px) {
+    .footer_links {
+        grid-template-columns: repeat(2, 1fr);
+        gap: unset;
+    }
 }
