--- a/css/template/components/navbar.css
+++ b/css/template/components/navbar.css
@@ -33,3 +33,13 @@ nav .nav__btn-actions {
 .select:active {
   border: 2px solid #fff;
 }
+
+@media screen and (max-width: 960px) {
+  nav .nav__logo img {
+    width: 94px;
+    height: 26px;
+  }
+  .btn-action{
+    margin-left: 10px;
+  }
+}
