--- a/css/template/components/sections.css
+++ b/css/template/components/sections.css
@@ -34,14 +34,16 @@
     background-size: cover
 }
 
-.box .box__video video {
+.box .box__video {
     position: relative;
+    top: -355px;
+}
+
+.box .box__video video {
     z-index: 0;
 }
 
 .box .box__video.v1 video{
-    top: -352px;
-    left: -5px;
     width: 430px;
 }
 
@@ -66,6 +68,7 @@
         display: flex;
         flex-direction: column;
         height: fit-content;
+        align-items: center;
     }
 
     .reverse {
@@ -94,6 +97,11 @@
     }
 
     .box__video {
-        position: absolute;
+        position: relative;
+        top: -370px
+    }
+
+    .f_box {
+        flex-basis: 50%;
     }
 }
