--- a/components/sections.html
+++ b/components/sections.html
@@ -45,7 +45,7 @@
         </div>
         <div class="divider"></div>
         <div class="row container section flex-mobile">
-          <div class="box flex column justify-center align-center">
+          <div class="box last flex column justify-center align-center">
             <div class="box__title">
               <h2 class="main-title">Crea profili per i bambini</h2>
               <p class="h3 mtop16">
@@ -69,7 +69,7 @@
                 <img width="50px" height="50px" src="../assets/video/download-icon.gif" />
             </div>
           </div>
-          <div class="box flex column justify-center align-center">
+          <div class="box last flex column justify-center align-center">
             <div class="box__title">
               <h2 class="main-title">
                 Scarica le tue serie da guardare offline
