upgraded media queries

--- a/components/faq.html
+++ b/components/faq.html
@@ -14,7 +14,7 @@
         <div class="row section flex column justify-center align-center">
             <div class="row container flex column  txt-center  ">
                 <h2 class="main-title">Domande frequenti</h2>
-                <div class="faq">
+                <div class="faq mtop25">
                     <ul class="w100">
                         <li>
                             <p class="color-wht">Cos'è Netflix?</p>
