--- a/components/footer.html
+++ b/components/footer.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <footer class="row container section flex column align-center">
+    <footer class="row container section flex column align-center footer-pad">
         <div class="row container flex column">
             <div class="support_number">
                 <p>Domande? Chiama <a href="#">800-130-364</a></p>
