--- a/css/template/components/faq.css
+++ b/css/template/components/faq.css
@@ -20,19 +20,16 @@ button:hover {
     background-color: var(--color-terziary-hover);
 }
 
-h2 {
-    margin-bottom: 30px;
-    font-size: 3rem;
-    font-weight: 900;
-}
-
 @media screen and (max-width:600px) {
     .form-btn {
         flex-direction: column;
         align-items: center;
+        gap: 15px;
     }
+}
 
-    .button {
-        margin: 20px;
+@media screen and (max-width:900px) {
+    .faq ul li {
+        font-size: var(--p-size);
     }
 }
