--- a/css/template/components/footer.css
+++ b/css/template/components/footer.css
@@ -1,7 +1,3 @@
-/* footer {
-    background-color: black;
-} */
-
 .footer_links ul li {
     list-style-type: none;
     margin: 16px 0px 0px 12px;
@@ -41,5 +37,9 @@ footer a {
     .footer_links {
         grid-template-columns: repeat(2, 1fr);
         gap: unset;
+    }
+
+    .row.section.footer-pad {
+        padding: 32px;
     }
 }
