aggiunto banner al form

--- a/components/header.html
+++ b/components/header.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
-    <header class="h600">
+   <header>
       <div class="overlay">
       <nav >
         <div class="nav row flex justify-between mAuto p-top transparent">
@@ -620,6 +620,6 @@
         </button>
       </div>
     </div>
-    </header>
+  </header>
   </body>
 </html>
