--- a/css/template/components/header.css
+++ b/css/template/components/header.css
@@ -1,13 +1,16 @@
-header {
-    background: url(../../../assets/imgs/IT-it-20240129-popsignuptwoweeks-perspective_alpha_website_small.jpg) ;
+
+header{
     
+    background: url('../../../assets/imgs/IT-it-20240129-popsignuptwoweeks-perspective_alpha_website_small.jpg') ;
 }
 .overlay{
     width: 100%;
     height: 100%;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0.9) 100%);
 }
-
+.bg{
+    padding-top: 100px;;
+}
 .banner {
     width: 93%;
     height: 144px;
@@ -23,7 +26,8 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    top: -65px;;
+    /* top: -65px; */
+    bottom: -65px;
     position: relative;
 }
 
@@ -85,5 +89,9 @@ header {
    .banner svg{
     position: relative;
     z-index: 100;
+   }
+   
+   .mq-maxw-600{
+    max-width: 100%;
    }
 }
