faq and banner adjusted

--- a/components/faq.html
+++ b/components/faq.html
@@ -12,10 +12,10 @@
 <body>
     <div class="row section flex column justify-center align-center">
         <div class="row container flex column  txt-center faq">
-            <h2 class="main-title mbot60">Domande frequenti</h2>
+            <h2 class="main-title mbot45">Domande frequenti</h2>
             <ul>
                 <li>
-                    <p>Cos'è Netflix?</p>
+                    <p class="color-wht">Cos'è Netflix?</p>
                     <svg class="color-wht" width="36" height="36" viewBox="0 0 36 36" fill="none"
                         xmlns="http://www.w3.org/2000/svg" class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1"
                         data-name="Plus" alt="">
