--- a/css/template/components/faq.css
+++ b/css/template/components/faq.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: var(--h3-size);
     padding: 24px;
 
 }
