--- a/css/template/components/header.css
+++ b/css/template/components/header.css
@@ -1,16 +1,19 @@
+header {
 
-header{
-    
-    background: url('../../../assets/imgs/IT-it-20240129-popsignuptwoweeks-perspective_alpha_website_small.jpg') ;
+    background: url('../../../assets/imgs/IT-it-20240129-popsignuptwoweeks-perspective_alpha_website_small.jpg');
 }
-.overlay{
+
+.overlay {
     width: 100%;
     height: 100%;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0.9) 100%);
 }
-.bg{
-    padding-top: 100px;;
+
+.bg {
+    padding-top: 100px;
+    ;
 }
+
 .banner {
     width: 93%;
     height: 144px;
@@ -59,41 +62,46 @@ header{
     align-items: center;
 
 }
- 
+
 @media screen and (max-width: 960px) {
-    .main-title{
+    .main-title {
         font-size: var(--title-size-mq);
     }
-    .h3, .p{
+
+    .h3,
+    .p {
         font-size: var(--font-size-mq);
     }
-    
+
 }
 
 @media screen and (max-width: 600px) {
-   .column-mq{
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-   }
-   .button{
-    width: 106px;
-    height: 48px;
-    font-size: 17px;
-   }
-   .banner{
-    flex-direction: column;
-    margin-top: 60px;
-   }
-   .banner svg{
-    position: relative;
-    z-index: 100;
-   }
-   
-   .mq-maxw-600{
-    max-width: 100%;
-   }
+    .column-mq {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .button {
+        width: 106px;
+        height: 48px;
+        font-size: 17px;
+    }
+
+    .banner {
+        flex-direction: column;
+        margin-top: 60px;
+    }
+
+    .banner svg {
+        position: relative;
+        z-index: 100;
+    }
+
+    .mq-maxw-600 {
+        max-width: 100%;
+    }
 }
 
 @media screen and (max-width:480px) {
@@ -101,7 +109,7 @@ header{
         height: auto;
     }
 
-    .banner svg {
+    .banner .pop-corn {
         top: -20px
     }
 }
