--- a/components/footer.html
+++ b/components/footer.html
@@ -12,7 +12,7 @@
 <body>
     <footer class="row container section flex column align-center footer-pad">
         <div class="row container flex column">
-            <div class="support_number">
+            <div class="support_number mbot20">
                 <p>Domande? Chiama <a href="#">800-130-364</a></p>
             </div>
             <div class="footer_links">
@@ -51,7 +51,7 @@
                     <option class="bg-wht reverse-color" value="eng">English</option>
                 </select>
             </div>
-            <div class="netflix_tag">Netflix italia</div>
+            <div class="netflix_tag mtop25">Netflix italia</div>
 
         </div>
     </footer>
