--- a/css/template/components/header.css
+++ b/css/template/components/header.css
@@ -87,6 +87,10 @@ header {
         width: auto;
     }
 
+    header {
+        height: 900px;
+    }
+
     .button {
         width: 106px;
         height: 48px;
@@ -96,6 +100,7 @@ header {
     .banner {
         flex-direction: column;
         margin-top: 60px;
+        height: auto;
     }
 
     .banner svg {
@@ -110,16 +115,17 @@ header {
     .bg {
         margin-top: 0;
     }
-}
-
-@media screen and (max-width:480px) {
-    .banner {
-        height: auto;
-        padding: 0;
-    }
 
     .banner .pop-corn {
         top: -20px;
 
     }
+}
+
+@media screen and (max-width:480px) {
+    .banner {
+        height: auto;
+    }
+
+    
 }
